<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Subsect</string>
    <string name="action_settings">Settings</string>
    <string name="hostname">Host Name</string>
    <string name="password">Password</string>
    <string name="email">Email (Optional)</string>
    <string name="localnameserv">Alternate Connection Server</string>
    <string name="connectserv">Connection Server : subsect.net</string>
    <string name="connect">Server</string>
    <string name="bazaar">Bazaar</string>
    <string name="bazaarprompt">prompt</string>
    <string name="installed">Installed</string>
    <string name="defRemoteServer">"www.subsect.net"</string>
    <string name="defaulthost">""</string>
    <string name="webviewctr">"webviewctr"</string>
    <string name="exportsite">"Site to Export"</string>
    <string name="nosite">"No Sites Avaialable"</string>
    <string name="installroot">"Install Site"</string>
    <string name="tools">"Tools"</string>
    <string name="admin">"Administration"</string>
    <string name="confighost">"!! Host Name not set !!"</string>
    <string name="help">"Help"</string>
    <string name="hosthelp">"<b>Host Name</b> is the unique server name which
        will be your subdomain <i>yourhostname</i>.<b>subsect.net</b>. It is 4 - 20 lower case alphanumeric characters long."</string>
    <string name="installtitle">"Install Sites"</string>
    <string name="installprompt">"The Bazaar is the Susbsect App/Play Store. Tap the name for a description of a site or the icon to install it."</string>
    <string name="urlprompt_1">"After tapping CONTINUE, open a WebRTC compliant browser (Chrome, Firefox, Opera) and enter the url "</string>
    <string name="urlprompt_2">". Click Menu item to access installed site."</string>
</resources>
