<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/connect"
        android:title="@string/connect"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/subzaar"
        android:title="@string/subzaar"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/installed"
        android:title="@string/installed"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/tools"
        android:title="@string/tools"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
