<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".ServerActivity">


    <EditText android:id="@+id/input_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:maxLength="20"
        android:digits="abcdefghijklmnopqrstuvwxyz0123456789"
        android:inputType="text"
        android:hint="@string/hostname" />

    <EditText android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:maxLength="20"
        android:digits="_ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:hint="@string/email" />

    <Button
        android:id="@+id/butSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:text="Submit" />

</LinearLayout>